# sphDavide

./: CMakeLists.txt  README.md  commands.txt  gui.c  gui.cpp  modello.cpp  modello.h  parser.c  parser.h  posizioni.txt  prova.c  prova.h  sph.c  sph.cpp  sph.h  vecutils.cpp  vecutils.h
